# Demand-Forecasting

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml
dashboard/: app.py
dashboard/pages/: data_explorer.py  model_performance.py  predictions.py
data/: sample_data.csv
notebooks/: quick_explore.ipynb
pipelines/: __init__.py
scripts/: docker_build.sh  run_monitoring.py  save_model_for_api.py  verify_setup.py
src/: __init__.py  app.py  data_prep.py  download_data.py  evaluate.py  features.py  generate_data.py  train_prophet.py  train_xgboost.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  health.py  predictions.py
src/data/: __init__.py  ingestion.py  profiling.py  transformation.py  validation.py
src/features/: __init__.py  engineering.py  store.py
src/models/: __init__.py  base.py  evaluation.py  lightgbm_model.py  tuning.py  xgboost_model.py
src/monitoring/: __init__.py  drift.py  reports.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_data/: __init__.py  test_transformation.py  test_validation.py
tests/test_features/: __init__.py  test_engineering.py
tests/test_models/: __init__.py  test_models.py
